# CSC310

./: CMakeLists.txt
include/: algo.hpp  pch.hpp
src/: algo.cpp  empirical.cpp  main.cpp
tests/: algo_test.cpp  emp_test.cpp  test_main.cpp
